chore(ever-merchant): update packages to latest

--- a/merchant/tablet-ionic/package.json
+++ b/merchant/tablet-ionic/package.json
@@ -55,25 +55,25 @@
 		"cordova:run:prod:device": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn ionic cordova run android --prod --release --device"
 	},
 	"dependencies": {
-		"@angular/animations": "^7.2.7",
-		"@angular/common": "^7.2.7",
-		"@angular/core": "^7.2.7",
-		"@angular/forms": "^7.2.7",
-		"@angular/http": "^7.2.7",
-		"@angular/platform-browser": "^7.2.7",
-		"@angular/platform-browser-dynamic": "^7.2.7",
-		"@angular/pwa": "^0.13.4",
-		"@angular/router": "^7.2.7",
-		"@angular/service-worker": "^7.2.7",
+		"@angular/animations": "^7.2.9",
+		"@angular/common": "^7.2.9",
+		"@angular/core": "^7.2.9",
+		"@angular/forms": "^7.2.9",
+		"@angular/http": "^7.2.9",
+		"@angular/platform-browser": "^7.2.9",
+		"@angular/platform-browser-dynamic": "^7.2.9",
+		"@angular/router": "^7.2.9",
+		"@angular/service-worker": "^7.2.9",
+		"@angular/pwa": "^0.13.6",
 		"@ionic-native/barcode-scanner": "^5.2.0",
 		"@ionic-native/call-number": "^5.2.0",
 		"@ionic-native/camera": "^5.2.0",
 		"@ionic-native/core": "^5.2.0",
 		"@ionic-native/device": "^5.2.0",
-		"@ionic-native/dialogs": "~5.0.0",
+		"@ionic-native/dialogs": "~5.2.0",
 		"@ionic-native/email-composer": "^5.2.0",
 		"@ionic-native/file-transfer": "^5.2.0",
-		"@ionic-native/geolocation": "~5.0.0",
+		"@ionic-native/geolocation": "~5.2.0",
 		"@ionic-native/globalization": "^5.2.0",
 		"@ionic-native/google-analytics": "^5.2.0",
 		"@ionic-native/google-maps": "~5.0.0-beta.26",
@@ -88,7 +88,7 @@
 		"@ionic-native/status-bar": "^5.2.0",
 		"@ionic-native/unique-device-id": "~5.2.0",
 		"@ionic-native/vibration": "~5.2.0",
-		"@ionic/angular": "^4.0.2",
+		"@ionic/angular": "^4.1.1",
 		"@ionic/pro": "^2.0.4",
 		"@ionic/storage": "^2.2.0",
 		"@ngx-translate/core": "^11.0.1",
@@ -99,8 +99,9 @@
 		"apollo-angular-link-http": "^1.5.0",
 		"apollo-cache-inmemory": "^1.5.1",
 		"apollo-client": "^2.5.1",
-		"apollo-link-context": "^1.0.14",
-		"apollo-link-ws": "^1.0.14",
+		"apollo-link-context": "^1.0.17",
+		"apollo-link-ws": "^1.0.17",
+		"bootstrap": "^4.3.1",
 		"call-number": "^1.0.1",
 		"connect": "^3.6.6",
 		"cordova-android": "^7.1.4",
@@ -131,7 +132,7 @@
 		"cordova-plugin-uniquedeviceid": "^1.3.2",
 		"cordova-plugin-vibration": "^3.1.0",
 		"cordova-plugin-whitelist": "^1.3.3",
-		"core-js": "^2.6.3",
+		"core-js": "^2.6.5",
 		"cryptiles": "^4.1.3",
 		"es6-promise-plugin": "^4.2.2",
 		"font-awesome": "^4.7.0",
@@ -141,78 +142,78 @@
 		"ionic-angular": "^3.9.4",
 		"ionic-selectable": "4.4.0",
 		"ionicons": "^4.5.5",
-		"jsbarcode": "3.8.0",
+		"jsbarcode": "^3.11.0",
 		"lodash": "^4.17.11",
 		"masonry-layout": "^4.2.2",
 		"moment": "^2.24.0",
-		"mongoose": "^5.4.16",
+		"mongoose": "^5.4.19",
 		"mx.ferreyra.callnumber": "^0.0.2",
 		"ng2-completer": "^2.0.8",
 		"ng2-file-upload": "^1.3.0",
 		"ng2-smart-table": "^1.4.0",
 		"ngx-masonry": "^1.1.2",
-		"ngx-moment": "^3.3.0",
+		"ngx-moment": "^3.4.0",
 		"ngx-pagination": "^3.2.1",
 		"node-sass": "^4.11.0",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
-		"pm2": "^3.3.1",
+		"pm2": "^3.4.0",
 		"qrcode": "^1.3.3",
 		"rxjs": "^6.4.0",
 		"rxjs-compat": "^6.4.0",
 		"socket.io-client": "^2.2.0",
-		"stripe": "^6.25.1",
-		"subscriptions-transport-ws": "^0.9.15",
+		"stripe": "^6.26.1",
+		"subscriptions-transport-ws": "^0.9.16",
 		"sw-toolbox": "^3.6.0",
 		"symbol-observable": "^1.2.0",
 		"uuid": "^3.3.2",
 		"zone.js": "^0.8.29"
 	},
 	"devDependencies": {
-		"@angular-builders/custom-webpack": "^7.3.1",
+		"@angular-builders/custom-webpack": "^7.4.3",
 		"@angular-builders/dev-server": "^7.3.1",
-		"@angular-devkit/architect": "^0.13.4",
-		"@angular-devkit/build-angular": "^0.13.4",
-		"@angular-devkit/core": "^7.3.4",
-		"@angular-devkit/schematics": "^7.3.4",
-		"@angular/cli": "7.3.4",
-		"@angular/compiler": "^7.2.7",
-		"@angular/compiler-cli": "^7.2.7",
-		"@angular/language-service": "^7.2.7",
+		"@angular-devkit/architect": "^0.13.6",
+		"@angular-devkit/build-angular": "^0.13.6",
+		"@angular-devkit/core": "^7.3.6",
+		"@angular-devkit/schematics": "^7.3.6",
+		"@angular/cli": "^7.3.6",
+		"@angular/compiler": "^7.2.9",
+		"@angular/compiler-cli": "^7.2.9",
+		"@angular/language-service": "^7.2.9",
 		"@compodoc/compodoc": "^1.1.9",
-		"@ionic/angular-toolkit": "1.3.0",
+		"@ionic/angular-toolkit": "^1.4.0",
 		"@ionic/app-scripts": "^3.2.3",
-		"@ionic/lab": "^1.0.20",
+		"@ionic/lab": "^1.0.24",
 		"@ionic/ng-toolkit": "^1.1.0",
 		"@ionic/schematics-angular": "^1.0.7",
 		"@types/d3-color": "^1.2.2",
-		"@types/googlemaps": "^3.30.16",
-		"@types/graphql": "^14.0.5",
-		"@types/jasmine": "^3.3.9",
+		"@types/googlemaps": "^3.30.19",
+		"@types/graphql": "^14.0.7",
+		"@types/jasmine": "^3.3.10",
 		"@types/jasminewd2": "^2.0.6",
 		"@types/leaflet": "^1.4.3",
-		"@types/mongodb": "^3.1.19",
-		"@types/mongoose": "^5.3.20",
+		"@types/mongodb": "^3.1.22",
+		"@types/mongoose": "^5.3.22",
 		"@types/node": "^11.9.3",
 		"@types/reflect-metadata": "^0.1.0",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/stripe": "^6.19.8",
+		"@types/stripe": "^6.25.6",
 		"@types/uuid": "^3.4.4",
 		"@types/yargs": "^12.0.9",
-		"codelyzer": "^4.5.0",
+		"codelyzer": "^5.0.0-beta.1",
 		"cpr": "^3.0.1",
 		"cross-env": "^5.2.0",
-		"dotenv": "^6.2.0",
+		"dotenv": "^7.0.0",
 		"envalid": "^4.2.2",
 		"husky": "^1.3.1",
-		"ionic": "^4.10.3",
+		"ionic": "^4.12.0",
 		"rxjs-tslint": "0.1.5",
-		"terser": "^3.16.1",
+		"terser": "^3.17.0",
 		"terser-webpack-plugin": "^1.2.3",
-		"ts-node": "^8.0.2",
-		"tslint": "^5.13.1",
+		"ts-node": "^8.0.3",
+		"tslint": "^5.14.0",
 		"typescript": "~3.2.4",
 		"webpack-bundle-analyzer": "^3.1.0",
-		"yargs": "^13.1.0"
+		"yargs": "^13.2.2"
 	},
 	"cordova": {
 		"platforms": [
