--- a/shop/mobile-ionic/tsconfig.json
+++ b/shop/mobile-ionic/tsconfig.json
@@ -24,7 +24,7 @@
 			"typeorm": ["./modules/client.common.angular2/typeorm-placeholder"],
 			"environment": ["./environments/environment"],
 			"core-js/es7/reflect": [
-				"node_modules/core-js/proposals/reflect-metadata"
+				"../node_modules/core-js/proposals/reflect-metadata"
 			]
 		},
 		"lib": ["es2017", "dom", "esnext"],
