fix: getting Ionic builds working - we forgot to turn type of the "Ionic" projects when switch from Ionic 3 to Ionic 4 - improvements to generation of environment.ts files in Angular projects - some packages updates and related fixes - remove deprecated `pro_id` setting in Ionic configs - some tiny fixes to make code to build in production env

--- a/carrier/mobile-ionic/ionic.config.json
+++ b/carrier/mobile-ionic/ionic.config.json
@@ -3,7 +3,6 @@
 	"integrations": {
 		"cordova": {}
 	},
-	"type": "ionic-angular",
-	"pro_id": "16ee2ab7",
+	"type": "angular",
 	"id": "16ee2ab7"
 }
