--- a/carrier/mobile-ionic/package.json
+++ b/carrier/mobile-ionic/package.json
@@ -97,37 +97,36 @@
 		"apollo-link-ws": "^1.0.17",
 		"call-number": "~1.0.1",
 		"connect": "^3.6.6",
-		"cordova-android": "^7.1.4",
+		"cordova-android": "7.1.4",
 		"cordova-android-support-gradle-release": "^2.0.1",
 		"cordova-browser": "^6.0.0",
+		"cordova-open-native-settings": "^1.5.2",
 		"cordova-plugin-appavailability": "^0.4.2",
-		"cordova-plugin-device": "2.0.2",
+		"cordova-plugin-badge": "^0.8.8",
+		"cordova-plugin-camera": "^4.0.3",
+		"cordova-plugin-device": "^2.0.2",
 		"cordova-plugin-dialogs": "^2.0.1",
-		"cordova-plugin-geolocation": "4.0.1",
-		"cordova-plugin-globalization": "1.11.0",
-		"cordova-plugin-google-analytics": "1.8.6",
+		"cordova-plugin-email-composer": "^0.9.2",
+		"cordova-plugin-geolocation": "^4.0.1",
+		"cordova-plugin-globalization": "^1.11.0",
+		"cordova-plugin-google-analytics": "^1.8.6",
 		"cordova-plugin-inappbrowser": "^3.0.0",
 		"cordova-plugin-intercom": "^6.2.0",
 		"cordova-plugin-ionic-keyboard": "^2.1.3",
-		"cordova-plugin-ionic-webview": "^4.0.0",
-		"cordova-plugin-mixpanel": "4.5.2",
-		"cordova-plugin-splashscreen": "5.0.2",
-		"cordova-plugin-statusbar": "2.4.2",
-		"cordova-plugin-uniquedeviceid": "^1.3.2",
-		"cordova-plugin-vibration": "3.1.0",
-		"cordova-plugin-whitelist": "^1.3.3",
-		"cordova-open-native-settings": "^1.5.2",
-		"cordova-plugin-badge": "^0.8.8",
-		"cordova-plugin-camera": "4.0.3",
-		"cordova-plugin-email-composer": "^0.9.2",
-		"cordova-plugin-local-notification": "0.9.0-beta.2",
-		"cordova-plugin-network-information": "2.0.1",
+		"cordova-plugin-ionic-webview": "^4.0.1",
+		"cordova-plugin-local-notification": "^0.9.0-beta.2",
+		"cordova-plugin-mixpanel": "^4.5.2",
+		"cordova-plugin-network-information": "^2.0.1",
 		"cordova-plugin-screen-orientation": "^3.0.1",
-		"phonegap-plugin-barcodescanner": "^8.0.1",
+		"cordova-plugin-splashscreen": "^5.0.2",
+		"cordova-plugin-statusbar": "^2.4.2",
+		"cordova-plugin-uniquedeviceid": "^1.3.2",
+		"cordova-plugin-vibration": "^3.1.0",
+		"cordova-plugin-whitelist": "^1.3.3",
 		"core-js": "^3.0.0",
 		"cryptiles": "^4.1.3",
-		"font-awesome": "^4.7.0",
 		"es6-promise-plugin": "^4.2.2",
+		"font-awesome": "^4.7.0",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
 		"hooks-fixed": "^2.0.2",
@@ -137,8 +136,9 @@
 		"mongoose": "^5.4.19",
 		"mpath": "^0.5.1",
 		"mquery": "^3.2.0",
-		"mx.ferreyra.callnumber": "^0.0.2",
+		"mx.ferreyra.callnumber": "0.0.2",
 		"node-sass": "^4.11.0",
+		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"qrcode": "^1.3.3",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.4.0",
@@ -147,12 +147,11 @@
 		"save": "^2.3.3",
 		"socket.io-client": "^2.2.0",
 		"stripe": "^6.28.0",
-		"swiper": "^4.5.0",
 		"sw-toolbox": "^3.6.0",
+		"swiper": "^4.5.0",
 		"tslib": "^1.9.3",
 		"uuid": "^3.3.2",
 		"waves": "^0.1.1",
-		"webpack-merge": "^4.2.1",
 		"zone.js": "^0.9.0"
 	},
 	"devDependencies": {
@@ -209,7 +208,8 @@
 		"tslint": "^5.14.0",
 		"yargs": "^13.2.2",
 		"typescript": "~3.2.4",
-		"webpack-bundle-analyzer": "^3.1.0"
+		"webpack-bundle-analyzer": "^3.1.0",
+		"webpack-merge": "^4.2.1"
 	},
 	"config": {
 		"ionic_webpack": "./config/webpack.config.js"
@@ -227,7 +227,9 @@
 				"ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
 			},
 			"cordova-plugin-ionic-keyboard": {},
-			"cordova-plugin-google-analytics": {},
+			"cordova-plugin-google-analytics": {
+				"GMS_VERSION": "11.0.1"
+			},
 			"cordova-plugin-network-information": {},
 			"cordova-plugin-mixpanel": {
 				"PLAY_SERVICES_VERSION": "+"
@@ -246,7 +248,8 @@
 				"ANDROID_SUPPORT_V4_VERSION": "27.+"
 			},
 			"cordova-plugin-vibration": {},
-			"cordova-plugin-local-notification": {}
+			"cordova-plugin-local-notification": {},
+			"call-number": {}
 		}
 	},
 	"engines": {
