--- a/merchant/tablet-ionic/tsconfig.json
+++ b/merchant/tablet-ionic/tsconfig.json
@@ -6,6 +6,7 @@
 		"moduleResolution": "node",
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
+		"importHelpers": true,
 		"noImplicitAny": false,
 		"preserveConstEnums": true,
 		"allowSyntheticDefaultImports": true,
