--- a/shop/mobile-ionic/package.json
+++ b/shop/mobile-ionic/package.json
@@ -196,7 +196,8 @@
 		"tslint": "^5.14.0",
 		"yargs": "^13.2.2",
 		"typescript": "~3.2.4",
-		"webpack-bundle-analyzer": "^3.1.0"
+		"webpack-bundle-analyzer": "^3.1.0",
+		"webpack-merge": "^4.2.1"
 	},
 	"cordova": {
 		"platforms": [
