chore: packages updates

--- a/shop/mobile-ionic/package.json
+++ b/shop/mobile-ionic/package.json
@@ -52,35 +52,35 @@
 		"cordova:run:prod:device": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn ionic cordova run android --prod --release --device"
 	},
 	"dependencies": {
-		"@angular/animations": "^7.2.10",
-		"@angular/common": "^7.2.10",
-		"@angular/core": "^7.2.10",
-		"@angular/forms": "^7.2.10",
-		"@angular/http": "^7.2.10",
-		"@angular/platform-browser": "^7.2.10",
-		"@angular/platform-browser-dynamic": "^7.2.10",
-		"@angular/pwa": "^0.13.6",
-		"@angular/router": "^7.2.10",
-		"@angular/service-worker": "^7.2.3",
+		"@angular/animations": "^7.2.11",
+		"@angular/common": "^7.2.11",
+		"@angular/core": "^7.2.11",
+		"@angular/forms": "^7.2.11",
+		"@angular/http": "^7.2.11",
+		"@angular/platform-browser": "^7.2.11",
+		"@angular/platform-browser-dynamic": "^7.2.11",
+		"@angular/pwa": "^0.13.7",
+		"@angular/router": "^7.2.11",
+		"@angular/service-worker": "^7.2.11",
 		"@ionic-native/barcode-scanner": "^5.3.0",
 		"@ionic-native/call-number": "^5.3.0",
 		"@ionic-native/camera": "^5.3.0",
 		"@ionic-native/core": "^5.3.0",
 		"@ionic-native/device": "^5.3.0",
 		"@ionic-native/dialogs": "^5.3.0",
-		"@ionic-native/geolocation": "~5.3.0",
-		"@ionic-native/globalization": "~5.3.0",
-		"@ionic-native/google-analytics": "~5.3.0",
+		"@ionic-native/geolocation": "^5.3.0",
+		"@ionic-native/globalization": "^5.3.0",
+		"@ionic-native/google-analytics": "^5.3.0",
 		"@ionic-native/google-maps": "~5.0.0-beta.26",
 		"@ionic-native/in-app-browser": "^5.3.0",
-		"@ionic-native/intercom": "~5.3.0",
-		"@ionic-native/local-notifications": "~5.3.0",
-		"@ionic-native/mixpanel": "~5.3.0",
-		"@ionic-native/network": "~5.3.0",
-		"@ionic-native/splash-screen": "~5.3.0",
-		"@ionic-native/status-bar": "~5.3.0",
-		"@ionic-native/unique-device-id": "~5.3.0",
-		"@ionic-native/vibration": "~5.3.0",
+		"@ionic-native/intercom": "^5.3.0",
+		"@ionic-native/local-notifications": "^5.3.0",
+		"@ionic-native/mixpanel": "^5.3.0",
+		"@ionic-native/network": "^5.3.0",
+		"@ionic-native/splash-screen": "^5.3.0",
+		"@ionic-native/status-bar": "^5.3.0",
+		"@ionic-native/unique-device-id": "^5.3.0",
+		"@ionic-native/vibration": "^5.3.0",
 		"@ionic/angular": "^4.1.2",
 		"@ionic/pro": "^2.0.4",
 		"@ionic/storage": "^2.2.0",
@@ -96,7 +96,7 @@
 		"apollo-link-context": "^1.0.17",
 		"apollo-link-ws": "^1.0.17",
 		"bootstrap": "^4.3.1",
-		"call-number": "~1.0.1",
+		"call-number": "^1.0.1",
 		"cordova-android": "^7.1.4",
 		"cordova-android-support-gradle-release": "^2.0.1",
 		"cordova-browser": "^6.0.0",
@@ -122,7 +122,7 @@
 		"font-awesome": "^4.7.0",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
-		"ionicons": "~4.5.5",
+		"ionicons": "^4.5.5",
 		"jasmine": "^3.3.1",
 		"jsbarcode": "^3.11.0",
 		"lodash": "^4.17.11",
@@ -145,14 +145,14 @@
 	"devDependencies": {
 		"@angular-builders/custom-webpack": "^7.4.3",
 		"@angular-builders/dev-server": "^7.3.1",
-		"@angular-devkit/architect": "~0.13.6",
-		"@angular-devkit/build-angular": "~0.13.6",
-		"@angular-devkit/core": "~7.3.6",
-		"@angular-devkit/schematics": "^7.3.6",
-		"@angular/cli": "^7.3.6",
-		"@angular/compiler": "~7.2.10",
-		"@angular/compiler-cli": "~7.2.10",
-		"@angular/language-service": "^7.2.10",
+		"@angular-devkit/architect": "^0.13.7",
+		"@angular-devkit/build-angular": "^0.13.7",
+		"@angular-devkit/core": "^7.3.7",
+		"@angular-devkit/schematics": "^7.3.7",
+		"@angular/cli": "^7.3.7",
+		"@angular/compiler": "^7.2.11",
+		"@angular/compiler-cli": "^7.2.11",
+		"@angular/language-service": "^7.2.11",
 		"@compodoc/compodoc": "^1.1.9",
 		"@ionic/angular-toolkit": "^1.5.0",
 		"@ionic/app-scripts": "^3.2.3",
@@ -181,12 +181,12 @@
 		"dotenv": "^7.0.0",
 		"envalid": "^4.2.2",
 		"ionic": "^4.12.0",
-		"jasmine-core": "~3.3.0",
-		"jasmine-spec-reporter": "~4.2.1",
+		"jasmine-core": "^3.3.0",
+		"jasmine-spec-reporter": "^4.2.1",
 		"karma": "^4.0.1",
-		"karma-chrome-launcher": "~2.2.0",
-		"karma-coverage-istanbul-reporter": "~2.0.5",
-		"karma-jasmine": "~2.0.1",
+		"karma-chrome-launcher": "^2.2.0",
+		"karma-coverage-istanbul-reporter": "^2.0.5",
+		"karma-jasmine": "^2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.0",
 		"protractor": "^5.4.2",
 		"rxjs-tslint": "0.1.5",
