--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -129,6 +129,7 @@
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
 		"popper.js": "^1.14.7",
+		"qrcode": "^1.3.3",
 		"reflect-metadata": "^0.1.13",
 		"roboto-fontface": "^0.10.0",
 		"rxjs": "^6.4.0",
@@ -147,7 +148,6 @@
 		"zone.js": "^0.8.29"
 	},
 	"devDependencies": {
-		"conventional-changelog-cli": "^2.0.11",
 		"@angular-devkit/build-angular": "^0.13.1",
 		"@angular/cli": "^7.3.1",
 		"@angular/compiler-cli": "^7.2.4",
@@ -173,6 +173,7 @@
 		"@types/yargs": "^12.0.9",
 		"babel-loader": "^8.0.5",
 		"codelyzer": "^4.5.0",
+		"conventional-changelog-cli": "^2.0.11",
 		"cross-env": "^5.2.0",
 		"dotenv": "^6.2.0",
 		"envalid": "^4.2.2",
@@ -193,8 +194,8 @@
 		"ts-node": "^8.0.2",
 		"tslint": "^5.12.1",
 		"tslint-language-service": "^0.9.9",
-		"yargs": "^13.1.0",
-		"typescript": "~3.1.6"
+		"typescript": "~3.1.6",
+		"yargs": "^13.1.0"
 	},
 	"engines": {
 		"node": ">=10.15.0",
