--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -112,6 +112,7 @@
 		"ionicons": "^4.5.5",
 		"is-url": "^1.2.4",
 		"jquery": "^3.3.1",
+		"jsbarcode": "^3.11.0",
 		"leaflet": "^1.4.0",
 		"moment": "^2.24.0",
 		"nebular-icons": "1.1.0",
@@ -147,10 +148,9 @@
 		"zone.js": "^0.8.29"
 	},
 	"devDependencies": {
-		"conventional-changelog-cli": "^2.0.12",
+		"@angular-devkit/architect": "^0.13.7",
 		"@angular-devkit/build-angular": "^0.13.7",
 		"@angular-devkit/build-webpack": "^0.13.7",
-		"@angular-devkit/architect": "^0.13.7",
 		"@angular-devkit/core": "^7.3.7",
 		"@angular-devkit/schematics": "^7.3.7",
 		"@angular/cli": "^7.3.7",
@@ -198,9 +198,9 @@
 		"ts-node": "^8.0.2",
 		"tslint": "^5.12.1",
 		"tslint-language-service": "^0.9.9",
-		"yargs": "^13.1.0",
+		"typescript": "~3.1.6",
 		"webpack-dev-server": "^3.2.1",
-		"typescript": "~3.1.6"
+		"yargs": "^13.1.0"
 	},
 	"engines": {
 		"node": ">=10.15.0",
