feat(ever-api): auto generate https certificates EV-980

--- a/backend/api/.env.template
+++ b/backend/api/.env.template
@@ -7,6 +7,7 @@ HTTPSPORT=5501
 GQLPORT=5555
 GQLPORT_SUBSCRIPTIONS=5050
 
+CERTIFICATES_HTTPS_PATH=certificates/https
 HTTPS_CERT_PATH=certificates/https/cert.pem
 HTTPS_KEY_PATH=certificates/https/key.pem
 
