--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -58,7 +58,6 @@
 		"@nestjs/testing": "^6.0.2",
 		"@nestjs/typeorm": "^6.0.0",
 		"@nestjs/websockets": "^6.0.2",
-		"swagger-ui-express": "^4.0.2",
 		"apollo-server-express": "^2.4.8",
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.4",
@@ -79,6 +78,7 @@
 		"envalid": "^4.2.2",
 		"errorhandler": "^1.5.0",
 		"etag": "^1.8.1",
+		"event-stream": "3.3.4",
 		"express": "^4.16.4",
 		"express-handlebars": "^3.0.2",
 		"faker": "^4.1.0",
@@ -112,6 +112,7 @@
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
 		"passport-url": "^1.0.4",
+		"pem": "^1.14.2",
 		"pm2": "^3.4.0",
 		"redis": "^2.8.0",
 		"reflect-metadata": "^0.1.13",
@@ -126,6 +127,7 @@
 		"source-map-support": "^0.5.11",
 		"stripe": "^6.28.0",
 		"subscriptions-transport-ws": "^0.9.16",
+		"swagger-ui-express": "^4.0.2",
 		"symbol": "^0.3.1",
 		"symbol-observable": "^1.2.0",
 		"typeorm": "^0.2.15",
@@ -134,8 +136,7 @@
 		"upath": "^1.1.2",
 		"uuid": "^3.3.2",
 		"validator": "^10.11.0",
-		"ws": "^6.2.0",
-		"event-stream": "3.3.4"
+		"ws": "^6.2.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^7.5.2",
