chore: enable TS watch, updates lock files

--- a/backend/api/tsconfig.json
+++ b/backend/api/tsconfig.json
@@ -3,7 +3,9 @@
 		"module": "commonjs",
 		"lib": ["dom", "esnext", "es2017.object"],
 		"baseUrl": "./src",
-		"outDir": "build",
+		"incremental": true,
+		"removeComments": true,
+		"outDir": "./build",
 		"target": "es6",
 		"moduleResolution": "node",
 		"preserveConstEnums": true,
@@ -21,5 +23,5 @@
 		}
 	},
 	"include": ["src/**/*.ts", "./*.ts"],
-	"exclude": ["backup", "backup/TrackingService", "node_modules"]
+	"exclude": ["backup", "build", "backup/TrackingService", "node_modules"]
 }
