--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -33,6 +33,7 @@
 		"coverage": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 nyc report --reporter=text-lcov | coveralls",
 		"precommit": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 lint-staged",
 		"start": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn tsc && node build/main.js",
+		"start:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 concurrently \"wait-on build/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
 		"start:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn tsc && node ./build/pm2bootstrap.js",
 		"build": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn tsc && yarn webpack",
 		"dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn tsc && node ./build/main.js",
@@ -46,18 +47,17 @@
 	},
 	"dependencies": {
 		"@captemulation/get-parameter-names": "^1.2.0",
-		"@nestjs/common": "^6.0.2",
-		"@nestjs/core": "^6.0.2",
+		"@nestjs/common": "^6.0.4",
+		"@nestjs/core": "^6.0.4",
 		"@nestjs/cqrs": "^6.0.0",
-		"@nestjs/graphql": "^6.0.2",
-		"@nestjs/microservices": "^6.0.2",
+		"@nestjs/graphql": "^6.0.4",
+		"@nestjs/microservices": "^6.0.4",
 		"@nestjs/passport": "^6.0.0",
-		"@nestjs/platform-express": "^6.0.2",
-		"@nestjs/platform-socket.io": "^6.0.2",
+		"@nestjs/platform-express": "^6.0.4",
+		"@nestjs/platform-socket.io": "^6.0.4",
 		"@nestjs/swagger": "^3.0.2",
-		"@nestjs/testing": "^6.0.2",
 		"@nestjs/typeorm": "^6.0.0",
-		"@nestjs/websockets": "^6.0.2",
+		"@nestjs/websockets": "^6.0.4",
 		"apollo-server-express": "^2.4.8",
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.4",
@@ -139,6 +139,7 @@
 		"ws": "^6.2.0"
 	},
 	"devDependencies": {
+		"@nestjs/testing": "^6.0.4",
 		"@commitlint/cli": "^7.5.2",
 		"@commitlint/config-conventional": "^7.5.0",
 		"@commitlint/config-lerna-scopes": "^7.5.1",
@@ -187,7 +188,7 @@
 		"cz-conventional-changelog": "^2.1.0",
 		"husky": "^1.3.1",
 		"jest": "^24.5.0",
-		"nodemon": "^1.18.10",
+		"nodemon": "^1.18.11",
 		"nyc": "^13.3.0",
 		"prettier": "^1.16.4",
 		"prettier-tslint": "^0.4.2",
@@ -197,11 +198,12 @@
 		"supertest": "^4.0.2",
 		"ts-jest": "^24.0.0",
 		"ts-loader": "^5.3.3",
-		"ts-node": "^8.0.3",
-		"tslint": "^5.14.0",
+		"ts-node": "^8.1.0",
+		"tslint": "^5.16.0",
 		"typedoc": "^0.14.2",
 		"typemoq": "^2.1.0",
-		"typescript": "~3.1.6",
+		"typescript": "~3.4.3",
+		"wait-on": "^3.2.0",
 		"webpack": "^4.29.6",
 		"webpack-cli": "^3.3.0",
 		"webpack-command": "^0.4.2",
