Draft Storybook Integration (#462)

--- a/admin/website-angular/.storybook/tsconfig.json
+++ b/admin/website-angular/.storybook/tsconfig.json
@@ -1,5 +1,12 @@
 {
-	"extends": "../tsconfig.json",
-	"exclude": ["../src/test.ts", "../src/**/*.spec.ts"],
-	"include": ["../src/**/*"]
+	"extends": "../src/tsconfig.app.json",
+	"compilerOptions": {
+		"types": ["node", "googlemaps"]
+	},
+	"exclude": [
+		"../src/test.ts",
+		"../src/**/*.spec.ts",
+		"../projects/**/*.spec.ts"
+	],
+	"include": ["../src/**/*", "../projects/**/*"]
 }
