--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -54,7 +54,8 @@
 		"docs": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && compodoc -p src/tsconfig.app.json -d docs",
 		"docs:serve": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && compodoc -p src/tsconfig.app.json -d docs -s",
 		"release:changelog": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-		"storybook": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && start-storybook -p 9001 -c .storybook"
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
 		"@agm/core": "^1.0.0-beta.5",
@@ -126,6 +127,7 @@
 		"ngx-echarts": "^4.1.0",
 		"ngx-highlightjs": "^2.1.4",
 		"ngx-moment": "^3.3.0",
+		"ngx-translate-multi-http-loader": "^3.0.0",
 		"node-sass": "^4.11.0",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
@@ -148,10 +150,9 @@
 		"zone.js": "^0.8.29"
 	},
 	"devDependencies": {
-		"conventional-changelog-cli": "^2.0.12",
+		"@angular-devkit/architect": "^0.13.8",
 		"@angular-devkit/build-angular": "^0.13.8",
 		"@angular-devkit/build-webpack": "^0.13.8",
-		"@angular-devkit/architect": "^0.13.8",
 		"@angular-devkit/core": "^7.3.8",
 		"@angular-devkit/schematics": "^7.3.8",
 		"@angular/cli": "^7.3.8",
@@ -159,8 +160,12 @@
 		"@angular/language-service": "^7.2.11",
 		"@babel/core": "^7.4.0",
 		"@compodoc/compodoc": "^1.1.9",
-		"@storybook/addon-actions": "^5.0.6",
-		"@storybook/angular": "^5.0.6",
+		"@storybook/addon-actions": "^5.0.10",
+		"@storybook/addon-knobs": "^5.0.10",
+		"@storybook/addon-links": "^5.0.10",
+		"@storybook/addon-notes": "^5.0.10",
+		"@storybook/addons": "^5.0.10",
+		"@storybook/angular": "^5.0.10",
 		"@types/async": "^2.4.1",
 		"@types/d3-color": "^1.2.2",
 		"@types/faker": "^4.1.5",
@@ -178,6 +183,7 @@
 		"@types/yargs": "^13.0.0",
 		"babel-loader": "^8.0.5",
 		"codelyzer": "^4.5.0",
+		"conventional-changelog-cli": "^2.0.12",
 		"cross-env": "^5.2.0",
 		"dotenv": "^6.2.0",
 		"envalid": "^4.2.2",
