--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -47,22 +47,22 @@
 	},
 	"dependencies": {
 		"@captemulation/get-parameter-names": "^1.2.0",
-		"@nestjs/common": "^6.0.4",
-		"@nestjs/core": "^6.0.4",
+		"@nestjs/common": "^6.1.1",
+		"@nestjs/core": "^6.1.1",
 		"@nestjs/cqrs": "^6.0.0",
-		"@nestjs/graphql": "^6.0.4",
-		"@nestjs/microservices": "^6.0.4",
+		"@nestjs/graphql": "^6.0.5",
+		"@nestjs/microservices": "^6.1.1",
 		"@nestjs/passport": "^6.0.0",
-		"@nestjs/platform-express": "^6.0.4",
-		"@nestjs/platform-socket.io": "^6.0.4",
+		"@nestjs/platform-express": "^6.1.1",
+		"@nestjs/platform-socket.io": "^6.1.1",
 		"@nestjs/swagger": "^3.0.2",
 		"@nestjs/typeorm": "^6.0.0",
-		"@nestjs/websockets": "^6.0.4",
+		"@nestjs/websockets": "^6.1.1",
 		"apollo-server-express": "^2.4.8",
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.4",
-		"bluebird": "^3.5.3",
-		"body-parser": "^1.18.3",
+		"bluebird": "^3.5.4",
+		"body-parser": "^1.19.0",
 		"bunyan": "^1.8.12",
 		"bunyan-cloudwatch": "^2.2.0",
 		"bunyan-prettystream": "^0.1.3",
@@ -75,32 +75,32 @@
 		"cryptiles": "^4.1.3",
 		"destroy": "^1.0.4",
 		"dotenv": "^7.0.0",
-		"envalid": "^4.2.2",
+		"envalid": "^5.0.0",
 		"errorhandler": "^1.5.0",
 		"etag": "^1.8.1",
 		"event-stream": "3.3.4",
 		"express": "^4.16.4",
 		"express-handlebars": "^3.0.2",
 		"faker": "^4.1.0",
-		"graphql": "^14.1.1",
+		"graphql": "^14.2.1",
 		"graphql-playground-middleware-express": "^1.7.12",
-		"graphql-subscriptions": "^1.0.0",
+		"graphql-subscriptions": "^1.1.0",
 		"graphql-tools": "^4.0.4",
-		"handlebars": "^4.1.1",
-		"image-size": "^0.7.2",
+		"handlebars": "^4.1.2",
+		"image-size": "^0.7.4",
 		"install": "^0.12.2",
 		"inversify": "^5.0.1",
 		"ipstack": "^0.1.1",
 		"jsonwebtoken": "^8.5.1",
-		"kafka-node": "^4.0.4",
+		"kafka-node": "^4.1.1",
 		"lodash": "^4.17.11",
 		"method-override": "^3.0.0",
 		"mkdirp": "^0.5.1",
 		"module-alias": "^2.2.0",
 		"moment": "^2.24.0",
-		"mongodb": "^3.2.1",
-		"mongodb-memory-server": "^5.0.2",
-		"mongoose": "^5.5.0",
+		"mongodb": "^3.2.3",
+		"mongodb-memory-server": "^5.1.0",
+		"mongoose": "^5.5.4",
 		"morgan": "^1.9.1",
 		"ms": "^2.1.1",
 		"node-sass": "^4.11.0",
@@ -113,43 +113,44 @@
 		"passport-local": "^1.0.0",
 		"passport-url": "^1.0.4",
 		"pem": "^1.14.2",
-		"pm2": "^3.4.0",
+		"pm2": "^3.5.0",
 		"redis": "^2.8.0",
 		"reflect-metadata": "^0.1.13",
 		"request": "^2.88.0",
 		"request-ip": "^2.1.3",
 		"request-promise": "^4.2.4",
-		"rxjs": "^6.4.0",
-		"rxjs-compat": "^6.4.0",
+		"rxjs": "^6.5.1",
+		"rxjs-compat": "^6.5.1",
 		"serve-favicon": "^2.5.0",
+		"snappy": "^6.1.2",
 		"socket.io": "^2.2.0",
 		"socket.io-client": "^2.2.0",
-		"source-map-support": "^0.5.11",
-		"stripe": "^6.28.0",
+		"source-map-support": "^0.5.12",
+		"stripe": "^6.31.0",
 		"subscriptions-transport-ws": "^0.9.16",
 		"swagger-ui-express": "^4.0.2",
 		"symbol": "^0.3.1",
 		"symbol-observable": "^1.2.0",
-		"typeorm": "^0.2.15",
+		"typeorm": "^0.2.16",
 		"typescript-collections": "^1.3.2",
 		"underscore.string": "^3.3.5",
 		"upath": "^1.1.2",
 		"uuid": "^3.3.2",
 		"validator": "^10.11.0",
-		"ws": "^6.2.0"
+		"ws": "^6.2.1"
 	},
 	"devDependencies": {
-		"@nestjs/testing": "^6.0.4",
 		"@commitlint/cli": "^7.5.2",
 		"@commitlint/config-conventional": "^7.5.0",
 		"@commitlint/config-lerna-scopes": "^7.5.1",
 		"@commitlint/travis-cli": "^7.5.2",
+		"@nestjs/testing": "^6.1.1",
 		"@types/bcrypt": "^3.0.0",
 		"@types/bluebird": "^3.5.26",
 		"@types/body-parser": "^1.17.0",
 		"@types/bunyan": "^1.8.6",
 		"@types/core-decorators": "^0.20.0",
-		"@types/cors": "^2.8.4",
+		"@types/cors": "^2.8.5",
 		"@types/errorhandler": "^0.0.32",
 		"@types/express": "^4.16.1",
 		"@types/faker": "^4.1.5",
@@ -164,50 +165,50 @@
 		"@types/method-override": "^0.0.31",
 		"@types/mkdirp": "^0.5.2",
 		"@types/moment": "^2.13.0",
-		"@types/mongodb": "^3.1.22",
-		"@types/mongoose": "^5.3.23",
+		"@types/mongodb": "^3.1.25",
+		"@types/mongoose": "^5.3.26",
 		"@types/node": "^11.9.3",
 		"@types/passport": "^1.0.0",
 		"@types/passport-jwt": "^3.0.1",
-		"@types/redis": "^2.8.11",
+		"@types/redis": "^2.8.12",
 		"@types/reflect-metadata": "^0.1.0",
 		"@types/request": "^2.48.1",
-		"@types/request-promise": "^4.1.42",
-		"@types/sinon": "^7.0.10",
+		"@types/request-promise": "^4.1.43",
+		"@types/sinon": "^7.0.11",
 		"@types/socket.io": "^2.1.2",
 		"@types/socket.io-client": "^1.4.32",
 		"@types/source-map-support": "^0.5.0",
-		"@types/stripe": "^6.25.7",
+		"@types/stripe": "^6.25.12",
 		"@types/uuid": "^3.4.4",
 		"@types/ws": "^6.0.1",
 		"concurrently": "^4.1.0",
-		"conventional-changelog": "^3.0.6",
-		"core-js": "^3.0.0",
+		"conventional-changelog": "^3.1.4",
+		"cz-conventional-changelog": "^2.1.0",
+		"core-js": "^3.0.1",
 		"coveralls": "^3.0.3",
 		"cross-env": "^5.2.0",
-		"cz-conventional-changelog": "^2.1.0",
-		"husky": "^1.3.1",
-		"jest": "^24.5.0",
+		"husky": "^2.1.0",
+		"jest": "^24.7.1",
 		"nodemon": "^1.18.11",
-		"nyc": "^13.3.0",
-		"prettier": "^1.16.4",
+		"nyc": "^14.0.0",
+		"prettier": "^1.17.0",
 		"prettier-tslint": "^0.4.2",
 		"pretty-quick": "^1.10.0",
 		"require-directory": "^2.1.1",
 		"rxjs-tslint": "0.1.5",
 		"supertest": "^4.0.2",
-		"ts-jest": "^24.0.0",
-		"ts-loader": "^5.3.3",
+		"ts-jest": "^24.0.2",
+		"ts-loader": "^5.4.3",
 		"ts-node": "^8.1.0",
 		"tslint": "^5.16.0",
 		"typedoc": "^0.14.2",
 		"typemoq": "^2.1.0",
-		"typescript": "~3.4.3",
+		"typescript": "~3.4.5",
 		"wait-on": "^3.2.0",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.3.0",
+		"webpack": "^4.30.0",
+		"webpack-cli": "^3.3.1",
 		"webpack-command": "^0.4.2",
-		"webpack-graphql-loader": "^1.0.0",
+		"webpack-graphql-loader": "^1.0.2",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"nyc": {
