--- a/merchant/tablet-ionic/package.json
+++ b/merchant/tablet-ionic/package.json
@@ -197,12 +197,12 @@
 		"@types/stripe": "^6.25.7",
 		"@types/uuid": "^3.4.4",
 		"@types/yargs": "^13.0.0",
-		"codelyzer": "^5.0.0-beta.1",
+		"codelyzer": "^5.0.1",
 		"cpr": "^3.0.1",
 		"cross-env": "^5.2.0",
 		"dotenv": "^7.0.0",
-		"envalid": "^4.2.2",
-		"husky": "^1.3.1",
+		"envalid": "^5.0.0",
+		"husky": "^2.1.0",
 		"ionic": "^4.12.0",
 		"rxjs-tslint": "0.1.5",
 		"terser": "^3.17.0",
