--- a/admin/website-angular/tsconfig.json
+++ b/admin/website-angular/tsconfig.json
@@ -23,7 +23,11 @@
 				"./modules/client.common.angular2/mongoose-placeholder"
 			],
 			"typeorm": ["./modules/client.common.angular2/typeorm-placeholder"],
-			"environment": ["./environments/environment"]
+			"environment": ["./environments/environment"],
+			"core-js/es7/reflect": [
+				"../node_modules/core-js/proposals/reflect-metadata"
+			],
+			"core-js/es6/*": ["../node_modules/core-js/es"]
 		},
 		"lib": ["es2017", "dom", "esnext"],
 		"noUnusedLocals": false,
