--- a/admin/website-angular/tsconfig.json
+++ b/admin/website-angular/tsconfig.json
@@ -27,6 +27,8 @@
 			"core-js/es7/reflect": [
 				"../node_modules/core-js/proposals/reflect-metadata"
 			],
+			"core-js/es7/array": ["../node_modules/core-js/stable/array"],
+			"core-js/es7/object": ["../node_modules/core-js/stable/object"],
 			"core-js/es6/*": ["../node_modules/core-js/es"]
 		},
 		"lib": ["es2017", "dom", "esnext"],
