chore: update husky and mpath to the latest version

--- a/merchant/tablet-ionic/package.json
+++ b/merchant/tablet-ionic/package.json
@@ -65,23 +65,23 @@
 		"@angular/pwa": "^0.13.8",
 		"@angular/router": "^7.2.11",
 		"@angular/service-worker": "^7.2.11",
-		"@ionic-native/camera": "^5.5.1",
-		"@ionic-native/call-number": "^5.5.1",
 		"@ionic-native/barcode-scanner": "^5.5.1",
+		"@ionic-native/call-number": "^5.5.1",
+		"@ionic-native/camera": "^5.5.1",
 		"@ionic-native/core": "^5.3.0",
-		"@ionic-native/email-composer": "^5.5.1",
 		"@ionic-native/device": "^5.5.1",
 		"@ionic-native/dialogs": "^5.5.1",
+		"@ionic-native/email-composer": "^5.5.1",
 		"@ionic-native/file-transfer": "^5.5.1",
 		"@ionic-native/geolocation": "^5.5.1",
 		"@ionic-native/globalization": "^5.3.0",
 		"@ionic-native/google-analytics": "^5.5.1",
 		"@ionic-native/google-maps": "~5.5.0",
-		"@ionic-native/network": "^5.5.1",
-		"@ionic-native/mixpanel": "^5.5.1",
-		"@ionic-native/local-notifications": "^5.5.1",
-		"@ionic-native/intercom": "^5.5.1",
 		"@ionic-native/in-app-browser": "^5.5.1",
+		"@ionic-native/intercom": "^5.5.1",
+		"@ionic-native/local-notifications": "^5.5.1",
+		"@ionic-native/mixpanel": "^5.5.1",
+		"@ionic-native/network": "^5.5.1",
 		"@ionic-native/open-native-settings": "^5.3.0",
 		"@ionic-native/screen-orientation": "^5.3.0",
 		"@ionic-native/splash-screen": "^5.3.0",
@@ -202,17 +202,17 @@
 		"cross-env": "^5.2.0",
 		"dotenv": "^7.0.0",
 		"envalid": "^5.0.0",
-		"husky": "^2.1.0",
+		"husky": "^2.3.0",
 		"ionic": "^4.12.0",
 		"rxjs-tslint": "0.1.5",
 		"terser": "^3.17.0",
 		"terser-webpack-plugin": "^1.2.3",
 		"ts-node": "^8.0.3",
 		"tslint": "^5.14.0",
-		"yargs": "^13.2.2",
 		"typescript": "~3.2.4",
 		"webpack-bundle-analyzer": "^3.1.0",
-		"webpack-merge": "^4.2.1"
+		"webpack-merge": "^4.2.1",
+		"yargs": "^13.2.2"
 	},
 	"cordova": {
 		"platforms": [
