--- a/carrier/mobile-ionic/package.json
+++ b/carrier/mobile-ionic/package.json
@@ -62,9 +62,9 @@
 		"@angular/pwa": "^0.13.7",
 		"@angular/router": "^7.2.11",
 		"@angular/service-worker": "^7.2.11",
-		"@ionic-native/camera": "^5.5.1",
-		"@ionic-native/call-number": "^5.5.1",
 		"@ionic-native/barcode-scanner": "^5.5.1",
+		"@ionic-native/call-number": "^5.5.1",
+		"@ionic-native/camera": "^5.5.1",
 		"@ionic-native/core": "^5.3.0",
 		"@ionic-native/device": "^5.5.1",
 		"@ionic-native/dialogs": "^5.5.1",
@@ -72,11 +72,11 @@
 		"@ionic-native/globalization": "^5.3.0",
 		"@ionic-native/google-analytics": "^5.5.1",
 		"@ionic-native/google-maps": "~5.5.0",
-		"@ionic-native/network": "^5.5.1",
-		"@ionic-native/mixpanel": "^5.5.1",
-		"@ionic-native/local-notifications": "^5.5.1",
-		"@ionic-native/intercom": "^5.5.1",
 		"@ionic-native/in-app-browser": "^5.5.1",
+		"@ionic-native/intercom": "^5.5.1",
+		"@ionic-native/local-notifications": "^5.5.1",
+		"@ionic-native/mixpanel": "^5.5.1",
+		"@ionic-native/network": "^5.5.1",
 		"@ionic-native/splash-screen": "^5.3.0",
 		"@ionic-native/status-bar": "^5.3.0",
 		"@ionic-native/unique-device-id": "^5.3.0",
@@ -134,7 +134,7 @@
 		"kareem": "^2.3.0",
 		"lodash": "^4.17.11",
 		"mongoose": "^5.5.0",
-		"mpath": "^0.5.1",
+		"mpath": "^0.6.0",
 		"mquery": "^3.2.0",
 		"mx.ferreyra.callnumber": "0.0.2",
 		"node-sass": "^4.11.0",
@@ -166,11 +166,11 @@
 		"@angular/compiler": "^7.2.12",
 		"@angular/compiler-cli": "^7.2.12",
 		"@angular/language-service": "^7.2.12",
-		"@schematics/angular": "^7.3.8",
 		"@compodoc/compodoc": "^1.1.9",
 		"@ionic/angular-toolkit": "^1.5.1",
 		"@ionic/app-scripts": "^3.2.3",
 		"@ionic/lab": "^1.0.24",
+		"@schematics/angular": "^7.3.8",
 		"@types/d3-color": "^1.2.2",
 		"@types/googlemaps": "^3.30.19",
 		"@types/graphql": "^14.0.7",
@@ -182,16 +182,16 @@
 		"@types/node": "^11.9.3",
 		"@types/reflect-metadata": "^0.1.0",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/uuid": "^3.4.4",
-		"@types/yargs": "^13.0.0",
 		"@types/stripe": "^6.25.7",
 		"@types/swiper": "^4.4.2",
+		"@types/uuid": "^3.4.4",
+		"@types/yargs": "^13.0.0",
 		"codelyzer": "^5.0.1",
-		"cross-env": "^5.2.0",
 		"cpr": "^3.0.1",
-		"husky": "^2.1.0",
+		"cross-env": "^5.2.0",
 		"dotenv": "^7.0.0",
 		"envalid": "^5.0.0",
+		"husky": "^2.3.0",
 		"ionic": "^4.12.0",
 		"jasmine-core": "^3.3.0",
 		"jasmine-spec-reporter": "^4.2.1",
@@ -206,10 +206,10 @@
 		"terser-webpack-plugin": "^1.2.3",
 		"ts-node": "^8.0.3",
 		"tslint": "^5.14.0",
-		"yargs": "^13.2.2",
 		"typescript": "~3.2.4",
 		"webpack-bundle-analyzer": "^3.1.0",
-		"webpack-merge": "^4.2.1"
+		"webpack-merge": "^4.2.1",
+		"yargs": "^13.2.2"
 	},
 	"config": {
 		"ionic_webpack": "./config/webpack.config.js"
