--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -190,10 +190,10 @@
 		"codelyzer": "^5.0.1",
 		"copy-webpack-plugin": "^5.0.0",
 		"cross-env": "^5.2.0",
-		"dotenv": "^6.2.0",
-		"envalid": "^5.0.0",
 		"cryptiles": "^4.1.3",
 		"css-loader": "^2.1.0",
+		"dotenv": "^6.2.0",
+		"envalid": "^5.0.0",
 		"exports-loader": "^0.7.0",
 		"expose-loader": "^0.7.5",
 		"extract-text-webpack-plugin": "~3.0.2",
@@ -201,7 +201,7 @@
 		"find-root": "^1.1.0",
 		"gh-pages": "^2.0.1",
 		"html-webpack-plugin": "^3.2.0",
-		"husky": "^2.1.0",
+		"husky": "^2.3.0",
 		"imports-loader": "^0.8.0",
 		"istanbul-instrumenter-loader": "^3.0.1",
 		"jasmine-core": "^3.3.0",
@@ -239,6 +239,7 @@
 		"tslint": "^5.13.1",
 		"tslint-loader": "^3.6.0",
 		"typedoc": "^0.14.2",
+		"typescript": "~3.1.6",
 		"uglifyjs-webpack-plugin": "^2.1.2",
 		"url-loader": "^1.1.2",
 		"webpack": "^4.29.6",
@@ -248,8 +249,7 @@
 		"webpack-dev-server": "^3.2.1",
 		"webpack-inline-manifest-plugin": "^4.0.1",
 		"webpack-merge": "^4.2.1",
-		"yargs": "^13.2.1",
-		"typescript": "~3.1.6"
+		"yargs": "^13.2.1"
 	},
 	"engines": {
 		"node": ">=10.15.0",
