--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -147,7 +147,7 @@
 		"ngx-drag-scroll": "^7.1.3",
 		"ngx-hm-carousel": "^1.6.5-bata.1",
 		"ngx-infinite-scroll": "^7.0.1",
-		"ngx-toastr": "~9.1.2",
+		"ngx-toastr": "^10.0.4",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.4.0",
 		"rxjs-compat": "^6.4.0",
@@ -155,7 +155,7 @@
 		"sass-extract": "^2.1.0",
 		"sass-extract-loader": "^1.1.0",
 		"socket.io-client": "^2.2.0",
-		"stripe": "^6.25.1",
+		"stripe": "^7.0.0",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
 		"zone.js": "^0.8.29"
