chore: update packages to the latest version @ionic/lab, axios, @commitlint/cli

--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -115,7 +115,7 @@
 		"@angular/platform-server": "^7.2.11",
 		"@angular/router": "^7.2.11",
 		"@angular/service-worker": "^7.2.11",
-		"@fortawesome/angular-fontawesome": "^0.3.0",
+		"@fortawesome/angular-fontawesome": "~0.3.0",
 		"@fortawesome/fontawesome-free": "^5.8.2",
 		"@fortawesome/fontawesome-svg-core": "^1.2.18",
 		"@fortawesome/free-brands-svg-icons": "^5.8.2",
@@ -169,7 +169,7 @@
 		"@angular/compiler-cli": "^7.2.11",
 		"@angular/language-service": "^7.2.9",
 		"@compodoc/compodoc": "^1.1.9",
-		"@ngtools/webpack": "^7.3.4",
+		"@ngtools/webpack": "~7.3.4",
 		"@types/googlemaps": "^3.30.16",
 		"@types/hammerjs": "^2.0.36",
 		"@types/jasmine": "^3.3.9",
