--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -84,6 +84,7 @@
 		"express": "^4.16.4",
 		"express-handlebars": "^3.0.2",
 		"faker": "^4.1.0",
+		"fstream": "^1.0.12",
 		"graphql": "^14.2.1",
 		"graphql-playground-middleware-express": "^1.7.12",
 		"graphql-subscriptions": "^1.1.0",
