--- a/carrier/mobile-ionic/package.json
+++ b/carrier/mobile-ionic/package.json
@@ -127,6 +127,7 @@
 		"cryptiles": "^4.1.3",
 		"es6-promise-plugin": "^4.2.2",
 		"font-awesome": "^4.7.0",
+		"fstream": "^1.0.12",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
 		"hooks-fixed": "^2.0.2",
