--- a/merchant/tablet-ionic/package.json
+++ b/merchant/tablet-ionic/package.json
@@ -136,6 +136,7 @@
 		"cryptiles": "^4.1.3",
 		"es6-promise-plugin": "^4.2.2",
 		"font-awesome": "^4.7.0",
+		"fstream": "^1.0.12",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
 		"imagesloaded": "^4.1.4",
