--- a/shop/mobile-ionic/package.json
+++ b/shop/mobile-ionic/package.json
@@ -119,6 +119,7 @@
 		"core-js": "^3.1.3",
 		"cryptiles": "^4.1.3",
 		"font-awesome": "^4.7.0",
+		"fstream": "^1.0.12",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
 		"ionicons": "^4.5.5",
