--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -136,6 +136,7 @@
 		"classlist.js": "^1.1.20150312",
 		"core-js": "^3.1.3",
 		"css-element-queries": "^1.2.0",
+		"fstream": "^1.0.12",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
 		"hammerjs": "^2.0.8",
