chore(ever-admin): update to nebular 4

--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -65,16 +65,15 @@
 		"@angular/compiler": "^8.0.0",
 		"@angular/core": "^8.0.0",
 		"@angular/forms": "^8.0.0",
-		"@angular/http": "^7.2.15",
 		"@angular/platform-browser": "^8.0.0",
 		"@angular/platform-browser-dynamic": "^8.0.0",
 		"@angular/router": "^8.0.0",
 		"@asymmetrik/ngx-leaflet": "^5.0.2",
-		"@fortawesome/fontawesome-free": "^5.8.1",
-		"@nebular/auth": "^3.5.0",
-		"@nebular/bootstrap": "^3.5.0",
-		"@nebular/security": "^3.5.0",
-		"@nebular/theme": "^3.5.0",
+		"@fortawesome/fontawesome-free": "^5.9.0",
+		"@nebular/auth": "^4.0.0",
+		"@nebular/bootstrap": "^4.0.0",
+		"@nebular/security": "^4.0.0",
+		"@nebular/theme": "^4.0.0",
 		"@ng-bootstrap/ng-bootstrap": "^4.1.1",
 		"@ng-select/ng-select": "^2.18.0",
 		"@ngx-translate/core": "^11.0.1",
@@ -128,7 +127,7 @@
 		"ngx-highlightjs": "^2.1.4",
 		"ngx-moment": "^3.4.0",
 		"ngx-translate-multi-http-loader": "^3.0.0",
-		"node-sass": "^4.11.0",
+		"node-sass": "^4.12.0",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
 		"popper.js": "^1.15.0",
@@ -153,7 +152,7 @@
 		"@angular-devkit/architect": "^0.800.1",
 		"@angular-devkit/build-angular": "^0.800.1",
 		"@angular-devkit/build-webpack": "^0.800.1",
-		"@angular-devkit/core": "~7.3.8",
+		"@angular-devkit/core": "^8.0.1",
 		"@angular-devkit/schematics": "^8.0.1",
 		"@angular/cli": "^8.0.1",
 		"@angular/compiler-cli": "^8.0.0",
