--- a/carrier/mobile-ionic/package.json
+++ b/carrier/mobile-ionic/package.json
@@ -130,6 +130,7 @@
 		"fstream": "^1.0.12",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
+		"handlebars": "^4.1.2",
 		"hooks-fixed": "^2.0.2",
 		"ionicons": "^4.5.5",
 		"kareem": "^2.3.0",
@@ -138,6 +139,7 @@
 		"mpath": "^0.6.0",
 		"mquery": "^3.2.0",
 		"mx.ferreyra.callnumber": "0.0.2",
+		"neo-async": "^2.6.1",
 		"node-sass": "^4.11.0",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"qrcode": "^1.3.3",
@@ -151,6 +153,7 @@
 		"sw-toolbox": "^3.6.0",
 		"swiper": "^4.5.0",
 		"tslib": "^1.9.3",
+		"uglify-js": "^3.6.0",
 		"uuid": "^3.3.2",
 		"waves": "^0.1.1",
 		"zone.js": "^0.9.0"
