--- a/merchant/tablet-ionic/package.json
+++ b/merchant/tablet-ionic/package.json
@@ -139,6 +139,7 @@
 		"fstream": "^1.0.12",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
+		"handlebars": "^4.1.2",
 		"imagesloaded": "^4.1.4",
 		"ionic-selectable": "4.4.1",
 		"ionicons": "^4.5.5",
@@ -148,6 +149,7 @@
 		"moment": "^2.24.0",
 		"mongoose": "^5.5.0",
 		"mx.ferreyra.callnumber": "^0.0.2",
+		"neo-async": "^2.6.1",
 		"ng2-completer": "^2.0.8",
 		"ng2-file-upload": "^1.3.0",
 		"ng2-smart-table": "^1.4.0",
@@ -165,6 +167,7 @@
 		"subscriptions-transport-ws": "^0.9.16",
 		"sw-toolbox": "^3.6.0",
 		"symbol-observable": "^1.2.0",
+		"uglify-js": "^3.6.0",
 		"uuid": "^3.3.2",
 		"zone.js": "^0.8.29"
 	},
