--- a/shop/mobile-ionic/package.json
+++ b/shop/mobile-ionic/package.json
@@ -122,11 +122,13 @@
 		"fstream": "^1.0.12",
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
+		"handlebars": "^4.1.2",
 		"ionicons": "^4.5.5",
 		"jasmine": "^3.3.1",
 		"jsbarcode": "^3.11.0",
 		"lodash": "^4.17.11",
 		"mx.ferreyra.callnumber": "0.0.2",
+		"neo-async": "^2.6.1",
 		"node-sass": "^4.11.0",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"qrcode": "^1.3.3",
@@ -140,6 +142,7 @@
 		"subscriptions-transport-ws": "^0.9.16",
 		"swiper": "^4.5.0",
 		"tslib": "^1.9.3",
+		"uglify-js": "^3.6.0",
 		"uuid": "^3.3.2",
 		"zone.js": "^0.9.0"
 	},
