--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -102,7 +102,7 @@
 		"webpack": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js"
 	},
 	"dependencies": {
-		"@agm/core": "^1.0.0-beta.5",
+		"@agm/core": "~1.0.0-beta.5",
 		"@angular/animations": "^7.2.11",
 		"@angular/cdk": "^7.3.6",
 		"@angular/common": "^7.2.11",
@@ -140,10 +140,12 @@
 		"graphql": "^14.1.1",
 		"graphql-tag": "^2.10.1",
 		"hammerjs": "^2.0.8",
+		"handlebars": "^4.1.2",
 		"http-server": "^0.11.1",
 		"ie-shim": "^0.1.0",
 		"masonry-layout": "^4.2.2",
 		"mdi-svg": "^2.2.43",
+		"neo-async": "^2.6.1",
 		"ng-lazyload-image": "^5.0.0",
 		"ngx-drag-scroll": "^7.1.3",
 		"ngx-hm-carousel": "^1.6.5-bata.1",
@@ -157,6 +159,7 @@
 		"sass-extract-loader": "^1.1.0",
 		"socket.io-client": "^2.2.0",
 		"stripe": "^7.0.0",
+		"uglify-js": "^3.6.0",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
 		"zone.js": "^0.8.29"
@@ -198,7 +201,7 @@
 		"exports-loader": "^0.7.0",
 		"expose-loader": "^0.7.5",
 		"extract-text-webpack-plugin": "~3.0.2",
-		"file-loader": "^3.0.1",
+		"file-loader": "~3.0.1",
 		"find-root": "^1.1.0",
 		"gh-pages": "^2.0.1",
 		"html-webpack-plugin": "^3.2.0",
@@ -225,7 +228,7 @@
 		"preload-webpack-plugin": "^2.3.0",
 		"prettier": "^1.16.4",
 		"protractor": "^5.4.2",
-		"raw-loader": "^1.0.0",
+		"raw-loader": "~1.0.0",
 		"rimraf": "^2.6.3",
 		"rxjs-tslint": "0.1.5",
 		"sass-loader": "^7.1.0",
@@ -242,7 +245,7 @@
 		"typedoc": "^0.14.2",
 		"typescript": "~3.1.6",
 		"uglifyjs-webpack-plugin": "^2.1.2",
-		"url-loader": "^1.1.2",
+		"url-loader": "~1.1.2",
 		"webpack": "^4.29.6",
 		"webpack-bundle-analyzer": "^3.1.0",
 		"webpack-cli": "^3.2.3",
