--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -201,7 +201,7 @@
 		"exports-loader": "^0.7.0",
 		"expose-loader": "^0.7.5",
 		"extract-text-webpack-plugin": "~3.0.2",
-		"file-loader": "~3.0.1",
+		"file-loader": "^4.0.0",
 		"find-root": "^1.1.0",
 		"gh-pages": "^2.0.1",
 		"html-webpack-plugin": "^3.2.0",
@@ -245,7 +245,7 @@
 		"typedoc": "^0.14.2",
 		"typescript": "~3.1.6",
 		"uglifyjs-webpack-plugin": "^2.1.2",
-		"url-loader": "~1.1.2",
+		"url-loader": "^2.0.0",
 		"webpack": "^4.29.6",
 		"webpack-bundle-analyzer": "^3.1.0",
 		"webpack-cli": "^3.2.3",
