chore(ever-carrier): completed upgrade to angular 8

--- a/carrier/mobile-ionic/angular.json
+++ b/carrier/mobile-ionic/angular.json
@@ -68,7 +68,7 @@
 					}
 				},
 				"serve": {
-					"builder": "@angular-builders/dev-server:generic",
+					"builder": "@angular-builders/custom-webpack:dev-server",
 					"options": {
 						"browserTarget": "app:build"
 					},
