--- a/merchant/tablet-ionic/package.json
+++ b/merchant/tablet-ionic/package.json
@@ -59,7 +59,6 @@
 		"@angular/common": "^8.0.0",
 		"@angular/core": "^8.0.0",
 		"@angular/forms": "^8.0.0",
-		"@angular/http": "^7.2.15",
 		"@angular/platform-browser": "^8.0.0",
 		"@angular/platform-browser-dynamic": "^8.0.0",
 		"@angular/pwa": "^0.800.1",
@@ -95,10 +94,10 @@
 		"@ngx-translate/http-loader": "^4.0.0",
 		"angular2-logger": "^0.7.0",
 		"angular2-wizard": "^0.4.0",
-		"apollo-angular": "^1.5.0",
-		"apollo-angular-link-http": "^1.5.0",
-		"apollo-cache-inmemory": "^1.5.1",
-		"apollo-client": "^2.5.1",
+		"apollo-angular": "^1.6.0",
+		"apollo-angular-link-http": "^1.7.0",
+		"apollo-cache-inmemory": "^1.6.2",
+		"apollo-client": "^2.6.2",
 		"apollo-link-context": "^1.0.17",
 		"apollo-link-ws": "^1.0.17",
 		"bootstrap": "^4.3.1",
@@ -141,8 +140,8 @@
 		"graphql-tag": "^2.10.1",
 		"handlebars": "^4.1.2",
 		"imagesloaded": "^4.1.4",
-		"ionic-selectable": "4.4.1",
-		"ionicons": "^4.5.5",
+		"ionic-selectable": "^4.4.1",
+		"ionicons": "^4.5.8",
 		"jsbarcode": "^3.11.0",
 		"lodash": "^4.17.11",
 		"masonry-layout": "^4.2.2",
@@ -160,8 +159,8 @@
 		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"pm2": "^3.4.0",
 		"qrcode": "^1.3.3",
-		"rxjs": "^6.4.0",
-		"rxjs-compat": "^6.4.0",
+		"rxjs": "^6.5.2",
+		"rxjs-compat": "^6.5.2",
 		"socket.io-client": "^2.2.0",
 		"stripe": "^7.0.0",
 		"subscriptions-transport-ws": "^0.9.16",
@@ -169,24 +168,23 @@
 		"symbol-observable": "^1.2.0",
 		"uglify-js": "^3.6.0",
 		"uuid": "^3.3.2",
-		"zone.js": "^0.8.29"
+		"zone.js": "^0.9.1"
 	},
 	"devDependencies": {
-		"@angular-builders/custom-webpack": "^7.4.3",
-		"@angular-builders/dev-server": "^7.3.1",
-		"@angular-devkit/architect": "^0.13.8",
-		"@angular-devkit/build-angular": "^0.13.8",
-		"@angular-devkit/build-optimizer": "^0.13.8",
-		"@angular-devkit/core": "^7.3.8",
-		"@angular-devkit/schematics": "^7.3.8",
-		"@angular/cli": "^7.3.8",
+		"@angular-builders/custom-webpack": "^8.0.2",
+		"@angular-devkit/architect": "^0.800.2",
+		"@angular-devkit/build-angular": "^0.800.2",
+		"@angular-devkit/build-optimizer": "^0.800.2",
+		"@angular-devkit/core": "^8.0.2",
+		"@angular-devkit/schematics": "^8.0.2",
+		"@angular/cli": "^8.0.2",
 		"@angular/compiler": "^8.0.0",
-		"@angular/compiler-cli": "^7.2.12",
-		"@angular/language-service": "^7.2.12",
+		"@angular/compiler-cli": "^8.0.0",
+		"@angular/language-service": "^8.0.0",
 		"@compodoc/compodoc": "^1.1.9",
 		"@ionic/angular-toolkit": "^1.5.1",
-		"@ionic/app-scripts": "^3.2.3",
-		"@ionic/lab": "^2.0.0",
+		"@ionic/app-scripts": "^3.2.4",
+		"@ionic/lab": "^2.0.1",
 		"@types/d3-color": "^1.2.2",
 		"@types/googlemaps": "^3.30.19",
 		"@types/graphql": "^14.0.7",
@@ -201,19 +199,20 @@
 		"@types/stripe": "^6.25.17",
 		"@types/uuid": "^3.4.4",
 		"@types/yargs": "^13.0.0",
+		"@webcomponents/webcomponentsjs": "^2.2.10",
 		"codelyzer": "^5.0.1",
 		"cpr": "^3.0.1",
 		"cross-env": "^5.2.0",
 		"dotenv": "^8.0.0",
 		"envalid": "^5.0.0",
 		"husky": "^2.4.0",
-		"ionic": "^4.12.0",
+		"ionic": "^5.0.1",
 		"rxjs-tslint": "0.1.5",
 		"terser": "^4.0.0",
 		"terser-webpack-plugin": "^1.2.3",
 		"ts-node": "^8.0.3",
 		"tslint": "^5.14.0",
-		"typescript": "~3.2.4",
+		"typescript": "3.4.5",
 		"webpack-bundle-analyzer": "^3.1.0",
 		"webpack-merge": "^4.2.1",
 		"yargs": "^13.2.4"
